--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "chai": "~1.8.0",
     "express": "~4.13.1",
-    "mocha":"2.0.1",
+    "mocha": "2.0.1",
     "supertest": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.0"
   }
 }
